# cloud-architecture-recommender

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  MEMORY.md  README.md  docker-compose.yml  todo.md
.agents/: architect_agent.md  backend_agent.md  data_engineer_agent.md  devops_agent.md  frontend_agent.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  dependencies.py  main.py
backend/app/core/: __init__.py  config.py  constants.py  errors.py  logging.py
backend/app/db/: __init__.py  client.py  indexes.py  seed.py  seed_data.py
backend/app/models/: __init__.py  architecture.py  enums.py  scrape_job.py
backend/app/repositories/: __init__.py  architectures.py  protocols.py  scrape_jobs.py
backend/app/routers/: __init__.py  architectures.py  health.py  recommendations.py  scrape.py
backend/app/schemas/: __init__.py  architecture.py  health.py  recommendation.py  scrape.py
backend/app/scraper/: __init__.py  characteristics.py  discovery.py  factory.py  fetcher.py  llm_parser.py  parser.py  pipeline.py  robots.py  rules_parser.py  service_catalog.py
backend/app/services/: __init__.py  scrape.py
backend/app/services/recommendation/: compatibility.py  engine.py  explanation.py  normalization.py  service.py
backend/tests/: __init__.py  conftest.py  test_health.py
backend/tests/db/: test_seed_data.py
backend/tests/integration/: conftest.py  test_api.py
backend/tests/repositories/: conftest.py  test_architectures.py  test_scrape_jobs.py
backend/tests/routers/: test_architectures.py  test_recommendations.py  test_scrape.py
backend/tests/schemas/: test_flexible_request.py  test_recommendation_request.py
backend/tests/scraper/: test_characteristics.py  test_discovery.py  test_fetcher.py  test_llm_parser.py  test_robots.py  test_rules_parser.py
backend/tests/scraper/fixtures/: distributed_load_testing.html  virtual_waiting_room.html
backend/tests/services/: fakes.py  test_scrape.py
backend/tests/services/recommendation/: test_compatibility.py  test_engine.py  test_explanation.py  test_normalization.py
frontend/: .dockerignore  Dockerfile  (+6 more)
(+21 files in other folders)
